squirrel_srcs/PostgreSQL/parser/bison_parser.output
Terminals unused in grammar

   OVER
   PROCEDURE
   TRIGGER
   BEFORE
   OF
   AFTER
   OP_DOUBLE_DOLLAR
   PLPGSQL
   RETURN
   BEGIN
   LANGUAGE
   FUNCTION
   FOR
   INDEXED
   INSTEAD
   FILTER
   OP_XOR
   ARRAY
   EACH
   EXECUTE


State 502 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: stmt OP_SEMI stmtlist
    3         | stmt OP_SEMI

    4 stmt: create_stmt
    5     | drop_stmt
    6     | select_stmt
    7     | update_stmt
    8     | insert_stmt
    9     | alter_stmt
   10     | reindex_stmt

   11 create_stmt: create_table_stmt
   12            | create_index_stmt
   13            | create_view_stmt

   14 drop_stmt: drop_index_stmt
   15          | drop_table_stmt
   16          | drop_view_stmt

   17 alter_stmt: ALTER TABLE table_name alter_action

   18 select_stmt: select_no_parens
   19            | select_with_parens

   20 select_with_parens: OP_LP select_no_parens OP_RP
   21                   | OP_LP select_with_parens OP_RP

   22 select_no_parens: opt_with_clause select_clause_list opt_order_clause opt_limit_clause

   23 select_clause_list: select_clause
   24                   | select_clause combine_clause select_clause_list

   25 select_clause: SELECT opt_all_or_distinct select_target opt_from_clause opt_where_clause opt_group_clause opt_window_clause

   26 combine_clause: UNION
   27               | INTERSECT
   28               | EXCEPT

   29 opt_from_clause: from_clause
   30                | %empty

   31 select_target: expr_list

   32 opt_window_clause: window_clause
   33                  | %empty

   34 window_clause: WINDOW window_def_list

   35 window_def_list: window_def
   36                | window_def OP_COMMA window_def_list

   37 window_def: window_name AS OP_LP window OP_RP

   38 window_name: identifier

   39 window: opt_exist_window_name opt_partition opt_order_clause opt_frame_clause

   40 opt_partition: PARTITION BY expr_list
   41              | %empty

   42 opt_frame_clause: range_or_rows frame_bound_start opt_frame_exclude
   43                 | range_or_rows BETWEEN frame_bound_start AND frame_bound_end opt_frame_exclude
   44                 | %empty

   45 range_or_rows: RANGE
   46              | ROWS
   47              | GROUPS

   48 frame_bound_start: frame_bound
   49                  | UNBOUNDED PRECEDING

   50 frame_bound_end: frame_bound
   51                | UNBOUNDED FOLLOWING

   52 frame_bound: expr PRECEDING
   53            | expr FOLLOWING
   54            | CURRENT ROW

   55 opt_frame_exclude: EXCLUDE frame_exclude
   56                  | %empty

   57 frame_exclude: NO OTHERS
   58              | CURRENT ROW
   59              | GROUP
   60              | TIES

   61 opt_exist_window_name: identifier
   62                      | %empty

   63 opt_group_clause: GROUP BY expr_list opt_having_clause
   64                 | %empty

   65 opt_having_clause: HAVING expr
   66                  | %empty

   67 opt_where_clause: where_clause
   68                 | %empty

   69 where_clause: WHERE expr

   70 from_clause: FROM table_ref

   71 table_ref: opt_table_prefix table_name opt_on_or_using
   72          | opt_table_prefix OP_LP select_no_parens OP_RP opt_on_or_using
   73          | opt_table_prefix OP_LP table_ref OP_RP opt_on_or_using

   74 opt_on_or_using: on_or_using
   75                | %empty

   76 on_or_using: ON expr
   77            | USING OP_LP column_name_list OP_RP

   78 column_name_list: column_name
   79                 | column_name OP_COMMA column_name_list

   80 opt_table_prefix: table_ref join_op
   81                 | %empty

   82 join_op: OP_COMMA
   83        | JOIN
   84        | NATURAL opt_join_type JOIN

   85 opt_join_type: LEFT
   86              | LEFT OUTER
   87              | INNER
   88              | CROSS
   89              | %empty

   90 expr_list: expr OP_COMMA expr_list
   91          | expr

   92 opt_limit_clause: limit_clause
   93                 | %empty

   94 limit_clause: LIMIT expr
   95             | LIMIT expr OFFSET expr
   96             | LIMIT expr OP_COMMA expr

   97 opt_order_clause: ORDER BY order_item_list
   98                 | %empty

   99 opt_order_nulls: NULLS FIRST
  100                | NULLS LAST
  101                | %empty

  102 order_item_list: order_item
  103                | order_item OP_COMMA order_item_list

  104 order_item: expr opt_order_behavior opt_order_nulls

  105 opt_order_behavior: ASC
  106                   | DESC
  107                   | %empty

  108 opt_with_clause: WITH cte_table_list
  109                | WITH RECURSIVE cte_table_list
  110                | %empty

  111 cte_table_list: cte_table
  112               | cte_table OP_COMMA cte_table_list

  113 cte_table: cte_table_name AS OP_LP select_stmt OP_RP

  114 cte_table_name: table_name opt_column_name_list_p

  115 opt_all_or_distinct: ALL
  116                    | DISTINCT
  117                    | %empty

  118 create_table_stmt: CREATE opt_temp TABLE opt_if_not_exist table_name AS select_stmt
  119                  | CREATE opt_temp TABLE opt_if_not_exist table_name OP_LP column_def_list opt_table_constraint_list OP_RP

  120 create_index_stmt: CREATE opt_unique INDEX opt_if_not_exist table_name ON table_name OP_LP indexed_column_list OP_RP opt_where_clause

  121 create_view_stmt: CREATE opt_temp VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  122                 | CREATE opt_temp RECURSIVE VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  123                 | CREATE OR REPLACE opt_temp VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  124                 | CREATE OR REPLACE opt_temp RECURSIVE VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option

  125 drop_index_stmt: DROP INDEX opt_if_exist table_name

  126 drop_table_stmt: DROP TABLE opt_if_exist table_name

  127 drop_view_stmt: DROP VIEW opt_if_exist view_name

  128 insert_stmt: opt_with_clause INSERT INTO table_name insert_rest opt_on_conflict

  129 insert_rest: opt_column_name_list_p select_no_parens
  130            | opt_column_name_list_p DEFAULT VALUES
  131            | opt_column_name_list_p VALUES super_values_list

  132 super_values_list: values_list
  133                  | values_list OP_COMMA super_values_list

  134 values_list: OP_LP expr_list OP_RP

  135 opt_on_conflict: ON CONFLICT opt_conflict_expr DO NOTHING
  136                | ON CONFLICT opt_conflict_expr DO UPDATE set_clause_list where_clause
  137                | %empty

  138 opt_conflict_expr: OP_LP indexed_column_list OP_RP where_clause
  139                  | %empty

  140 indexed_column_list: indexed_column
  141                    | indexed_column OP_COMMA indexed_column_list

  142 indexed_column: expr opt_order_behavior

  143 update_stmt: opt_with_clause UPDATE table_name SET set_clause_list opt_where_clause

  144 reindex_stmt: REINDEX TABLE table_name
  145             | REINDEX INDEX table_name

  146 alter_action: RENAME TO table_name
  147             | RENAME opt_column column_name TO column_name
  148             | ADD opt_column column_def

  149 column_def_list: column_def
  150                | column_def OP_COMMA column_def_list

  151 column_def: identifier type_name opt_column_constraint_list

  152 opt_column_constraint_list: column_constraint_list
  153                           | %empty

  154 column_constraint_list: column_constraint
  155                       | column_constraint column_constraint_list

  156 column_constraint: constraint_type

  157 constraint_type: PRIMARY KEY
  158                | NOT NULL
  159                | UNIQUE
  160                | CHECK OP_LP expr OP_RP
  161                | foreign_clause

  162 foreign_clause: REFERENCES table_name opt_column_name_list_p opt_foreign_key_actions opt_constraint_attribute_spec

  163 opt_foreign_key_actions: foreign_key_actions
  164                        | %empty

  165 foreign_key_actions: MATCH FULL
  166                    | MATCH PARTIAL
  167                    | MATCH SIMPLE
  168                    | ON UPDATE key_actions
  169                    | ON DELETE key_actions

  170 key_actions: SET NULL
  171            | SET DEFAULT
  172            | CASCADE
  173            | RESTRICT
  174            | NO ACTION

  175 opt_constraint_attribute_spec: DEFFERRABLE opt_initial_time
  176                              | NOT DEFFERRABLE opt_initial_time
  177                              | %empty

  178 opt_initial_time: INITIALLY DEFERRED
  179                 | INITIALLY IMMEDIATE
  180                 | %empty

  181 constraint_name: CONSTRAINT name

  182 opt_temp: TEMPORARY
  183         | TEMP
  184         | LOCAL TEMPORARY
  185         | LOCAL TEMP
  186         | GLOBAL TEMPORARY
  187         | GLOBAL TEMP
  188         | UNLOGGED
  189         | %empty

  190 opt_check_option: WITH CHECK OPTION
  191                 | WITH CASCADED CHECK OPTION
  192                 | WITH LOCAL CHECK OPTION
  193                 | %empty

  194 opt_column_name_list_p: OP_LP column_name_list OP_RP
  195                       | %empty

  196 set_clause_list: set_clause
  197                | set_clause OP_COMMA set_clause_list

  198 set_clause: column_name OP_EQUAL expr
  199           | OP_LP column_name_list OP_RP OP_EQUAL expr

  200 expr: operand
  201     | between_expr
  202     | exists_expr
  203     | in_expr
  204     | cast_expr
  205     | logic_expr

  206 operand: OP_LP expr_list OP_RP
  207        | array_index
  208        | scalar_expr
  209        | unary_expr
  210        | binary_expr
  211        | case_expr
  212        | extract_expr
  213        | OP_LP select_no_parens OP_RP

  214 cast_expr: CAST OP_LP expr AS type_name OP_RP

  215 scalar_expr: column_name
  216            | literal

  217 unary_expr: OP_SUB operand
  218           | NOT operand
  219           | operand ISNULL
  220           | operand IS NULL
  221           | operand IS NOT NULL
  222           | NULL
  223           | OP_MUL

  224 binary_expr: comp_expr
  225            | operand binary_op operand
  226            | operand LIKE operand
  227            | operand NOT LIKE operand

  228 logic_expr: expr AND expr
  229           | expr OR expr

  230 in_expr: operand opt_not IN OP_LP select_no_parens OP_RP
  231        | operand opt_not IN OP_LP expr_list OP_RP
  232        | operand opt_not IN table_name

  233 case_expr: CASE expr case_list END
  234          | CASE case_list END
  235          | CASE expr case_list ELSE expr END
  236          | CASE case_list ELSE expr END

  237 between_expr: operand BETWEEN operand AND operand
  238             | operand NOT BETWEEN operand AND operand

  239 exists_expr: opt_not EXISTS OP_LP select_no_parens OP_RP

  240 case_list: case_clause
  241          | case_clause case_list

  242 case_clause: WHEN expr THEN expr

  243 comp_expr: operand OP_EQUAL operand
  244          | operand OP_NOTEQUAL operand
  245          | operand OP_GREATERTHAN operand
  246          | operand OP_LESSTHAN operand
  247          | operand OP_LESSEQ operand
  248          | operand OP_GREATEREQ operand

  249 extract_expr: EXTRACT OP_LP datetime_field FROM expr OP_RP

  250 datetime_field: SECOND
  251               | MINUTE
  252               | HOUR
  253               | DAY
  254               | MONTH
  255               | YEAR

  256 array_index: operand OP_LBRACKET int_literal OP_RBRACKET

  257 literal: string_literal
  258        | bool_literal
  259        | num_literal

  260 string_literal: STRINGLITERAL

  261 bool_literal: TRUE
  262             | FALSE

  263 num_literal: int_literal
  264            | float_literal

  265 int_literal: INTLITERAL

  266 float_literal: FLOATLITERAL

  267 opt_column: COLUMN
  268           | %empty

  269 opt_if_not_exist: IF NOT EXISTS
  270                 | %empty

  271 opt_if_exist: IF EXISTS
  272             | %empty

  273 identifier: IDENTIFIER

  274 table_name: identifier

  275 column_name: identifier

  276 opt_unique: UNIQUE
  277           | %empty

  278 view_name: identifier

  279 binary_op: OP_ADD
  280          | OP_SUB
  281          | OP_DIVIDE
  282          | OP_MOD
  283          | OP_MUL

  284 opt_not: NOT
  285        | %empty

  286 name: identifier

  287 type_name: numeric_type
  288          | character_type

  289 character_type: character_with_length
  290               | character_without_length

  291 character_with_length: character_conflicta OP_LP int_literal OP_RP

  292 character_without_length: character_conflicta

  293 character_conflicta: CHARACTER opt_varying
  294                    | CHAR opt_varying
  295                    | VARCHAR
  296                    | TEXT
  297                    | NATIONAL CHARACTER opt_varying
  298                    | NATIONAL CHAR opt_varying
  299                    | NCHAR opt_varying

  300 opt_varying: VARYING
  301            | %empty

  302 numeric_type: INT
  303             | INTEGER
  304             | SMALLINT
  305             | BIGINT
  306             | REAL
  307             | FLOAT
  308             | DOUBLE PRECISION
  309             | DECIMAL
  310             | DEC
  311             | NUMERIC
  312             | BOOLEAN

  313 opt_table_constraint_list: table_constraint_list
  314                          | %empty

  315 table_constraint_list: table_constraint
  316                      | table_constraint OP_COMMA table_constraint_list

  317 table_constraint: constraint_name PRIMARY KEY OP_LP indexed_column_list OP_RP
  318                 | constraint_name UNIQUE OP_LP indexed_column_list OP_RP
  319                 | constraint_name CHECK OP_LP expr OP_RP
  320                 | constraint_name FOREIGN KEY OP_LP column_name_list OP_RP foreign_clause


Terminals, with rules where they appear

$end (0) 0
error (256)
OP_NOTEQUAL (258) 244
SIMPLE (259) 167
TEXT (260) 296
OVER (261)
BETWEEN (262) 43 237 238
OP_SEMI (263) 2 3
BIGINT (264) 305
LIMIT (265) 94 95 96
WITH (266) 108 109 190 191 192
ORDER (267) 97
LAST (268) 100
UNBOUNDED (269) 49 51
PRECEDING (270) 49 52
EXCEPT (271) 28
NUMERIC (272) 311
OP_LESSTHAN (273) 246
PROCEDURE (274)
ACTION (275) 174
FIRST (276) 99
OP_GREATEREQ (277) 248
CHECK (278) 160 190 191 192 319
FULL (279) 165
NATURAL (280) 84
DOUBLE (281) 308
NATIONAL (282) 297 298
OP_ADD (283) 279
CURRENT (284) 54 58
TRIGGER (285)
OP_SUB (286) 217 280
FALSE (287) 262
UNIQUE (288) 159 276 318
WHERE (289) 69
MINUTE (290) 251
BEFORE (291)
ON (292) 76 120 135 136 168 169
PARTIAL (293) 166
OF (294)
AFTER (295)
PRIMARY (296) 157 317
MONTH (297) 254
DEFERRED (298) 178
OP_DOUBLE_DOLLAR (299)
VARYING (300) 300
OP_GREATERTHAN (301) 245
OR (302) 123 124 229
PLPGSQL (303)
DELETE (304) 169
INDEX (305) 120 125 145
RETURN (306)
OP_MUL (307) 223 283
FOREIGN (308) 320
RESTRICT (309) 173
FOLLOWING (310) 51 53
TIES (311) 60
DEC (312) 310
SELECT (313) 25
BEGIN (314)
LANGUAGE (315)
DISTINCT (316) 116
TRUE (317) 261
BY (318) 40 63 97
OP_MOD (319) 282
VALUES (320) 130 131
IS (321) 220 221
ROW (322) 54 58
FUNCTION (323)
END (324) 233 234 235 236
RECURSIVE (325) 109 122 124
FOR (326)
UNION (327) 26
NULLS (328) 99 100
UPDATE (329) 136 143 168
ELSE (330) 235 236
RANGE (331) 45
OFFSET (332) 95
INDEXED (333)
INSTEAD (334)
NCHAR (335) 299
AND (336) 43 228 237 238
REINDEX (337) 144 145
INITIALLY (338) 178 179
YEAR (339) 255
PRECISION (340) 308
FILTER (341)
NOT (342) 158 176 218 221 227 238 269 284
VIEW (343) 121 122 123 124 127
DEFFERRABLE (344) 175 176
REAL (345) 306
THEN (346) 242
OPTION (347) 190 191 192
DEFAULT (348) 130 171
GLOBAL (349) 186 187
CROSS (350) 88
CHAR (351) 294 298
REFERENCES (352) 162
OP_XOR (353)
GROUP (354) 59 63
CASE (355) 233 234 235 236
SET (356) 143 170 171
HOUR (357) 252
NO (358) 57 174
COLUMN (359) 267
LOCAL (360) 184 185 192
DROP (361) 125 126 127
REPLACE (362) 123 124
ASC (363) 105
OP_COMMA (364) 36 79 82 90 96 103 112 133 141 150 197 316
TABLE (365) 17 118 119 126 144
ARRAY (366)
IF (367) 269 271
EXTRACT (368) 249
LEFT (369) 85 86
OUTER (370) 86
DECIMAL (371) 309
PARTITION (372) 40
CASCADE (373) 172
ADD (374) 148
OTHERS (375) 57
OP_LESSEQ (376) 247
MATCH (377) 165 166 167
ALL (378) 115
ROWS (379) 46
JOIN (380) 83 84
LIKE (381) 226 227
INTEGER (382) 303
OP_RP (383) 20 21 37 72 73 77 113 119 120 134 138 160 194 199 206 213
    214 230 231 239 249 291 317 318 319 320
INT (384) 302
BOOLEAN (385) 312
KEY (386) 157 317 320
EACH (387)
USING (388) 77
RENAME (389) 146 147
DO (390) 135 136
FLOAT (391) 307
OP_LP (392) 20 21 37 72 73 77 113 119 120 134 138 160 194 199 206 213
    214 230 231 239 249 291 317 318 319 320
CHARACTER (393) 293 297
UMINUS (394)
CAST (395) 214
GROUPS (396) 47
NULL (397) 158 170 220 221 222
SMALLINT (398) 304
INSERT (399) 128
TEMPORARY (400) 182 184 186
CONSTRAINT (401) 181
CREATE (402) 118 119 120 121 122 123 124
OP_LBRACKET (403) 256
WHEN (404) 242
IMMEDIATE (405) 179
TO (406) 146 147
EXCLUDE (407) 55
DAY (408) 253
CONFLICT (409) 135 136
OP_RBRACKET (410) 256
EXECUTE (411)
EXISTS (412) 239 269 271
INTO (413) 128
OP_DIVIDE (414) 281
CASCADED (415) 191
ISNULL (416) 219
AS (417) 37 113 118 121 122 123 124 214
INNER (418) 87
INTERSECT (419) 27
IN (420) 230 231 232
OP_EQUAL (421) 198 199 243
VARCHAR (422) 295
ALTER (423) 17
DESC (424) 106
FROM (425) 70 249
TEMP (426) 183 185 187
UNLOGGED (427) 188
SECOND (428) 250
WINDOW (429) 34
NOTHING (430) 135
HAVING (431) 65
INTLITERAL <ival> (432) 265
STRINGLITERAL <sval> (433) 260
FLOATLITERAL <fval> (434) 266
IDENTIFIER <sval> (435) 273


Nonterminals, with rules where they appear

$accept (181)
    on left: 0
program <program_t> (182)
    on left: 1, on right: 0
stmtlist <stmtlist_t> (183)
    on left: 2 3, on right: 1 2
stmt <stmt_t> (184)
    on left: 4 5 6 7 8 9 10, on right: 2 3
create_stmt <create_stmt_t> (185)
    on left: 11 12 13, on right: 4
drop_stmt <drop_stmt_t> (186)
    on left: 14 15 16, on right: 5
alter_stmt <alter_stmt_t> (187)
    on left: 17, on right: 9
select_stmt <select_stmt_t> (188)
    on left: 18 19, on right: 6 113 118 121 122 123 124
select_with_parens <select_with_parens_t> (189)
    on left: 20 21, on right: 19 21
select_no_parens <select_no_parens_t> (190)
    on left: 22, on right: 18 20 72 129 213 230 239
select_clause_list <select_clause_list_t> (191)
    on left: 23 24, on right: 22 24
select_clause <select_clause_t> (192)
    on left: 25, on right: 23 24
combine_clause <combine_clause_t> (193)
    on left: 26 27 28, on right: 24
opt_from_clause <opt_from_clause_t> (194)
    on left: 29 30, on right: 25
select_target <select_target_t> (195)
    on left: 31, on right: 25
opt_window_clause <opt_window_clause_t> (196)
    on left: 32 33, on right: 25
window_clause <window_clause_t> (197)
    on left: 34, on right: 32
window_def_list <window_def_list_t> (198)
    on left: 35 36, on right: 34 36
window_def <window_def_t> (199)
    on left: 37, on right: 35 36
window_name <window_name_t> (200)
    on left: 38, on right: 37
window <window_t> (201)
    on left: 39, on right: 37
opt_partition <opt_partition_t> (202)
    on left: 40 41, on right: 39
opt_frame_clause <opt_frame_clause_t> (203)
    on left: 42 43 44, on right: 39
range_or_rows <range_or_rows_t> (204)
    on left: 45 46 47, on right: 42 43
frame_bound_start <frame_bound_start_t> (205)
    on left: 48 49, on right: 42 43
frame_bound_end <frame_bound_end_t> (206)
    on left: 50 51, on right: 43
frame_bound <frame_bound_t> (207)
    on left: 52 53 54, on right: 48 50
opt_frame_exclude <opt_frame_exclude_t> (208)
    on left: 55 56, on right: 42 43
frame_exclude <frame_exclude_t> (209)
    on left: 57 58 59 60, on right: 55
opt_exist_window_name <opt_exist_window_name_t> (210)
    on left: 61 62, on right: 39
opt_group_clause <opt_group_clause_t> (211)
    on left: 63 64, on right: 25
opt_having_clause <opt_having_clause_t> (212)
    on left: 65 66, on right: 63
opt_where_clause <opt_where_clause_t> (213)
    on left: 67 68, on right: 25 120 143
where_clause <where_clause_t> (214)
    on left: 69, on right: 67 136 138
from_clause <from_clause_t> (215)
    on left: 70, on right: 29
table_ref <table_ref_t> (216)
    on left: 71 72 73, on right: 70 73 80
opt_on_or_using <opt_on_or_using_t> (217)
    on left: 74 75, on right: 71 72 73
on_or_using <on_or_using_t> (218)
    on left: 76 77, on right: 74
column_name_list <column_name_list_t> (219)
    on left: 78 79, on right: 77 79 194 199 320
opt_table_prefix <opt_table_prefix_t> (220)
    on left: 80 81, on right: 71 72 73
join_op <join_op_t> (221)
    on left: 82 83 84, on right: 80
opt_join_type <opt_join_type_t> (222)
    on left: 85 86 87 88 89, on right: 84
expr_list <expr_list_t> (223)
    on left: 90 91, on right: 31 40 63 90 134 206 231
opt_limit_clause <opt_limit_clause_t> (224)
    on left: 92 93, on right: 22
limit_clause <limit_clause_t> (225)
    on left: 94 95 96, on right: 92
opt_order_clause <opt_order_clause_t> (226)
    on left: 97 98, on right: 22 39
opt_order_nulls <opt_order_nulls_t> (227)
    on left: 99 100 101, on right: 104
order_item_list <order_item_list_t> (228)
    on left: 102 103, on right: 97 103
order_item <order_item_t> (229)
    on left: 104, on right: 102 103
opt_order_behavior <opt_order_behavior_t> (230)
    on left: 105 106 107, on right: 104 142
opt_with_clause <opt_with_clause_t> (231)
    on left: 108 109 110, on right: 22 128 143
cte_table_list <cte_table_list_t> (232)
    on left: 111 112, on right: 108 109 112
cte_table <cte_table_t> (233)
    on left: 113, on right: 111 112
cte_table_name <cte_table_name_t> (234)
    on left: 114, on right: 113
opt_all_or_distinct <opt_all_or_distinct_t> (235)
    on left: 115 116 117, on right: 25
create_table_stmt <create_table_stmt_t> (236)
    on left: 118 119, on right: 11
create_index_stmt <create_index_stmt_t> (237)
    on left: 120, on right: 12
create_view_stmt <create_view_stmt_t> (238)
    on left: 121 122 123 124, on right: 13
drop_index_stmt <drop_index_stmt_t> (239)
    on left: 125, on right: 14
drop_table_stmt <drop_table_stmt_t> (240)
    on left: 126, on right: 15
drop_view_stmt <drop_view_stmt_t> (241)
    on left: 127, on right: 16
insert_stmt <insert_stmt_t> (242)
    on left: 128, on right: 8
insert_rest <insert_rest_t> (243)
    on left: 129 130 131, on right: 128
super_values_list <super_values_list_t> (244)
    on left: 132 133, on right: 131 133
values_list <values_list_t> (245)
    on left: 134, on right: 132 133
opt_on_conflict <opt_on_conflict_t> (246)
    on left: 135 136 137, on right: 128
opt_conflict_expr <opt_conflict_expr_t> (247)
    on left: 138 139, on right: 135 136
indexed_column_list <indexed_column_list_t> (248)
    on left: 140 141, on right: 120 138 141 317 318
indexed_column <indexed_column_t> (249)
    on left: 142, on right: 140 141
update_stmt <update_stmt_t> (250)
    on left: 143, on right: 7
reindex_stmt <reindex_stmt_t> (251)
    on left: 144 145, on right: 10
alter_action <alter_action_t> (252)
    on left: 146 147 148, on right: 17
column_def_list <column_def_list_t> (253)
    on left: 149 150, on right: 119 150
column_def <column_def_t> (254)
    on left: 151, on right: 148 149 150
opt_column_constraint_list <opt_column_constraint_list_t> (255)
    on left: 152 153, on right: 151
column_constraint_list <column_constraint_list_t> (256)
    on left: 154 155, on right: 152 155
column_constraint <column_constraint_t> (257)
    on left: 156, on right: 154 155
constraint_type <constraint_type_t> (258)
    on left: 157 158 159 160 161, on right: 156
foreign_clause <foreign_clause_t> (259)
    on left: 162, on right: 161 320
opt_foreign_key_actions <opt_foreign_key_actions_t> (260)
    on left: 163 164, on right: 162
foreign_key_actions <foreign_key_actions_t> (261)
    on left: 165 166 167 168 169, on right: 163
key_actions <key_actions_t> (262)
    on left: 170 171 172 173 174, on right: 168 169
opt_constraint_attribute_spec <opt_constraint_attribute_spec_t> (263)
    on left: 175 176 177, on right: 162
opt_initial_time <opt_initial_time_t> (264)
    on left: 178 179 180, on right: 175 176
constraint_name <constraint_name_t> (265)
    on left: 181, on right: 317 318 319 320
opt_temp <opt_temp_t> (266)
    on left: 182 183 184 185 186 187 188 189, on right: 118 119 121
    122 123 124
opt_check_option <opt_check_option_t> (267)
    on left: 190 191 192 193, on right: 121 122 123 124
opt_column_name_list_p <opt_column_name_list_p_t> (268)
    on left: 194 195, on right: 114 121 122 123 124 129 130 131 162
set_clause_list <set_clause_list_t> (269)
    on left: 196 197, on right: 136 143 197
set_clause <set_clause_t> (270)
    on left: 198 199, on right: 196 197
expr <expr_t> (271)
    on left: 200 201 202 203 204 205, on right: 52 53 65 69 76 90 91
    94 95 96 104 142 160 198 199 214 228 229 233 235 236 242 249 319
operand <operand_t> (272)
    on left: 206 207 208 209 210 211 212 213, on right: 200 217 218
    219 220 221 225 226 227 230 231 232 237 238 243 244 245 246 247
    248 256
cast_expr <cast_expr_t> (273)
    on left: 214, on right: 204
scalar_expr <scalar_expr_t> (274)
    on left: 215 216, on right: 208
unary_expr <unary_expr_t> (275)
    on left: 217 218 219 220 221 222 223, on right: 209
binary_expr <binary_expr_t> (276)
    on left: 224 225 226 227, on right: 210
logic_expr <logic_expr_t> (277)
    on left: 228 229, on right: 205
in_expr <in_expr_t> (278)
    on left: 230 231 232, on right: 203
case_expr <case_expr_t> (279)
    on left: 233 234 235 236, on right: 211
between_expr <between_expr_t> (280)
    on left: 237 238, on right: 201
exists_expr <exists_expr_t> (281)
    on left: 239, on right: 202
case_list <case_list_t> (282)
    on left: 240 241, on right: 233 234 235 236 241
case_clause <case_clause_t> (283)
    on left: 242, on right: 240 241
comp_expr <comp_expr_t> (284)
    on left: 243 244 245 246 247 248, on right: 224
extract_expr <extract_expr_t> (285)
    on left: 249, on right: 212
datetime_field <datetime_field_t> (286)
    on left: 250 251 252 253 254 255, on right: 249
array_index <array_index_t> (287)
    on left: 256, on right: 207
literal <literal_t> (288)
    on left: 257 258 259, on right: 216
string_literal <string_literal_t> (289)
    on left: 260, on right: 257
bool_literal <bool_literal_t> (290)
    on left: 261 262, on right: 258
num_literal <num_literal_t> (291)
    on left: 263 264, on right: 259
int_literal <int_literal_t> (292)
    on left: 265, on right: 256 263 291
float_literal <float_literal_t> (293)
    on left: 266, on right: 264
opt_column <opt_column_t> (294)
    on left: 267 268, on right: 147 148
opt_if_not_exist <opt_if_not_exist_t> (295)
    on left: 269 270, on right: 118 119 120
opt_if_exist <opt_if_exist_t> (296)
    on left: 271 272, on right: 125 126 127
identifier <identifier_t> (297)
    on left: 273, on right: 38 61 151 274 275 278 286
table_name <table_name_t> (298)
    on left: 274, on right: 17 71 114 118 119 120 125 126 128 143 144
    145 146 162 232
column_name <column_name_t> (299)
    on left: 275, on right: 78 79 147 198 215
opt_unique <opt_unique_t> (300)
    on left: 276 277, on right: 120
view_name <view_name_t> (301)
    on left: 278, on right: 121 122 123 124 127
binary_op <binary_op_t> (302)
    on left: 279 280 281 282 283, on right: 225
opt_not <opt_not_t> (303)
    on left: 284 285, on right: 230 231 232 239
name <name_t> (304)
    on left: 286, on right: 181
type_name <type_name_t> (305)
    on left: 287 288, on right: 151 214
character_type <character_type_t> (306)
    on left: 289 290, on right: 288
character_with_length <character_with_length_t> (307)
    on left: 291, on right: 289
character_without_length <character_without_length_t> (308)
    on left: 292, on right: 290
character_conflicta <character_conflicta_t> (309)
    on left: 293 294 295 296 297 298 299, on right: 291 292
opt_varying <opt_varying_t> (310)
    on left: 300 301, on right: 293 294 297 298 299
numeric_type <numeric_type_t> (311)
    on left: 302 303 304 305 306 307 308 309 310 311 312, on right:
    287
opt_table_constraint_list <opt_table_constraint_list_t> (312)
    on left: 313 314, on right: 119
table_constraint_list <table_constraint_list_t> (313)
    on left: 315 316, on right: 313 316
table_constraint <table_constraint_t> (314)
    on left: 317 318 319 320, on right: 315 316


State 0

    0 $accept: . program $end

    WITH     shift, and go to state 1
    REINDEX  shift, and go to state 2
    DROP     shift, and go to state 3
    OP_LP    shift, and go to state 4
    CREATE   shift, and go to state 5
    ALTER    shift, and go to state 6

    $default  reduce using rule 110 (opt_with_clause)

    program             go to state 7
    stmtlist            go to state 8
    stmt                go to state 9
    create_stmt         go to state 10
    drop_stmt           go to state 11
    alter_stmt          go to state 12
    select_stmt         go to state 13
    select_with_parens  go to state 14
    select_no_parens    go to state 15
    opt_with_clause     go to state 16
    create_table_stmt   go to state 17
    create_index_stmt   go to state 18
    create_view_stmt    go to state 19
    drop_index_stmt     go to state 20
    drop_table_stmt     go to state 21
    drop_view_stmt      go to state 22
    insert_stmt         go to state 23
    update_stmt         go to state 24
    reindex_stmt        go to state 25


State 1

  108 opt_with_clause: WITH . cte_table_list
  109                | WITH . RECURSIVE cte_table_list

    RECURSIVE   shift, and go to state 26
    IDENTIFIER  shift, and go to state 27

    cte_table_list  go to state 28
    cte_table       go to state 29
    cte_table_name  go to state 30
    identifier      go to state 31
    table_name      go to state 32


State 2

  144 reindex_stmt: REINDEX . TABLE table_name
  145             | REINDEX . INDEX table_name

    INDEX  shift, and go to state 33
    TABLE  shift, and go to state 34


State 3

  125 drop_index_stmt: DROP . INDEX opt_if_exist table_name
  126 drop_table_stmt: DROP . TABLE opt_if_exist table_name
  127 drop_view_stmt: DROP . VIEW opt_if_exist view_name

    INDEX  shift, and go to state 35
    VIEW   shift, and go to state 36
    TABLE  shift, and go to state 37


State 4

   20 select_with_parens: OP_LP . select_no_parens OP_RP
   21                   | OP_LP . select_with_parens OP_RP

    WITH   shift, and go to state 1
    OP_LP  shift, and go to state 4

    $default  reduce using rule 110 (opt_with_clause)

    select_with_parens  go to state 38
    select_no_parens    go to state 39
    opt_with_clause     go to state 40


State 5

  118 create_table_stmt: CREATE . opt_temp TABLE opt_if_not_exist table_name AS select_stmt
  119                  | CREATE . opt_temp TABLE opt_if_not_exist table_name OP_LP column_def_list opt_table_constraint_list OP_RP
  120 create_index_stmt: CREATE . opt_unique INDEX opt_if_not_exist table_name ON table_name OP_LP indexed_column_list OP_RP opt_where_clause
  121 create_view_stmt: CREATE . opt_temp VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  122                 | CREATE . opt_temp RECURSIVE VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  123                 | CREATE . OR REPLACE opt_temp VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option
  124                 | CREATE . OR REPLACE opt_temp RECURSIVE VIEW view_name opt_column_name_list_p AS select_stmt opt_check_option

    UNIQUE     shift, and go to state 41
    OR         shift, and go to state 42
    GLOBAL     shift, and go to state 43
    LOCAL      shift, and go to state 44
    TEMPORARY  shift, and go to state 45
    TEMP       shift, and go to state 46
    UNLOGGED   shift, and go to state 47

    INDEX     reduce using rule 277 (opt_unique)
    $default  reduce using rule 189 (opt_temp)
